--- a/resources/public/css/ganja.css
+++ b/resources/public/css/ganja.css
@@ -3,7 +3,20 @@ body {
     background-repeat: repeat;
     background-size: auto;
     background-color: #000;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 2.0em;
+}
+
+h1 {
+    font-size: 2.5em;
+}
+
+h3 {
+    font-size: 1.5em;
+}
+
+p {
+    font-size: .9em;
 }
 
 .banner {
